--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <footer>
       <h3>ERICK / YEV : BOOTCAMP HACKABOSS 2022</h3>
     </footer>
-    <script src="./preguntas.js"></script>
+    <!-- <script src="./preguntas.js"></script> -->
     <script type="module" src="./main.js"></script>
   </body>
 </html>
